src/styles/Create.module.css
.duration {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    overflow: hidden;
}

.main {
    padding: 5rem 0;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.card {
    margin: 1rem;
    padding: 1.5rem;
    text-align: left;
    color: inherit;
    text-decoration: none;
    border: 2px solid #eaeaea;
    border-radius: 10px;
    transition: color 0.15s ease, border-color 0.15s ease;
    width: 60%;
}

.card2 {
    margin: 1rem;
    padding: 1.5rem;
    text-align: center;
    color: inherit;
    text-decoration: none;
    border: 2px solid #eaeaea;
    border-radius: 10px;
    transition: color 0.15s ease, border-color 0.15s ease;
    width: 100%;
}

.card:hover, .card:focus, .card:active, .card2:hover, .card2:focus, .card2:active {
    border-color: #0070f3;
}

.card h2, .card-qr h2 {
    margin: 0 0 1rem 0;
    font-size: 1.5rem;
}

.card p, .card-qr p {
    margin: 0;
    font-size: 1.25rem;
    line-height: 1.5;
}

.card input, .card select {
    font-size: 1.2rem;
    margin: 4px 0;
    line-height: 1.5;
    width: 100%;
}

.duration input, .duration select {
    width: 4rem;
    margin-right: 10px;
}

.durationInput {
    align-items: center;
    width: 100%;
    display: flex;
    flex-direction: row;
}

.dateTime {
    font-weight: normal;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

@media (max-width: 600px) {
    .grid {
        width: 100%;
        flex-direction: column;
    }
    .card {
        width: 80%;
    }
    .duration {
        flex-direction: column;
    }
}

.quickLink {
    font-weight: bold;
    color: #0070f3;
}

